Remove Guava collection as much as possible (Multimap is reserved for compatibility)