@@ -24,12 +24,6 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMultimap;
-import com.google.common.collect.Iterables;
-import com.google.common.collect.Multimap;
 import com.treasuredata.client.model.ObjectMappers;
 import com.treasuredata.client.model.TDBulkImportSession;
 import com.treasuredata.client.model.TDBulkLoadSessionStartRequest;
@@ -89,10 +83,12 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Calendar;
 import java.util.Collections;
 import java.util.Date;
 import java.util.GregorianCalendar;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -225,15 +221,10 @@ public class TestTDClient
         logger.debug(dbListStr);
 
         List<TDDatabase> detailedDBList = client.listDatabases();
-        Iterable<String> dbStr = Iterables.transform(detailedDBList, new Function<TDDatabase, String>()
-        {
-            @Override
-            public String apply(TDDatabase input)
-            {
-                String summary = String.format("name:%s, count:%s, createdAt:%s, updatedAt:%s, organization:%s, permission:%s", input.getName(), input.getCount(), input.getCreatedAt(), input.getUpdatedAt(), input.getOrganization(), input.getPermission());
-                return summary;
-            }
-        });
+        Iterable<String> dbStr = detailedDBList.stream().map(input -> {
+            String summary = String.format("name:%s, count:%s, createdAt:%s, updatedAt:%s, organization:%s, permission:%s", input.getName(), input.getCount(), input.getCreatedAt(), input.getUpdatedAt(), input.getOrganization(), input.getPermission());
+            return summary;
+        }).collect(Collectors.toList());
 
         String detailedDbListStr = String.join(", ", dbStr);
         logger.trace(detailedDbListStr);
@@ -314,20 +305,9 @@ public class TestTDClient
         assertEquals(101, jobsInAnIDRange.getJobs().size());
 
         // Check getters
-        Iterable<Method> getters = FluentIterable.from(TDJob.class.getDeclaredMethods()).filter(new Predicate<Method>()
-        {
-            @Override
-            public boolean apply(Method input)
-            {
-                return test(input);
-            }
-
-            @Override
-            public boolean test(Method input)
-            {
-                return input.getName().startsWith("get");
-            }
-        });
+        Iterable<Method> getters = Arrays.stream(TDJob.class.getDeclaredMethods()).filter(input -> {
+            return input.getName().startsWith("get");
+        }).collect(Collectors.toList());
         // Call getters
         for (TDJob job : jobs.getJobs()) {
             for (Method m : getters) {
@@ -926,21 +906,18 @@ public class TestTDClient
             byte[] keyName = "int_col_key_name".getBytes(StandardCharsets.UTF_8);
             // schema test
             TDTable targetTable = findTable(SAMPLE_DB, t).get();
-            List<TDColumn> newSchema = ImmutableList.<TDColumn>builder()
-                    .addAll(targetTable.getSchema())
-                    .add(new TDColumn("int_col", TDColumnType.INT, keyName))
-                    .build();
+
+            List<TDColumn> newSchema = new ArrayList<>(targetTable.getSchema());
+            newSchema.add(new TDColumn("int_col", TDColumnType.INT, keyName));
             client.updateTableSchema(SAMPLE_DB, t, newSchema);
             TDTable updatedTable = findTable(SAMPLE_DB, t).get();
             logger.debug(updatedTable.toString());
             assertTrue("should have updated column", updatedTable.getSchema().contains(new TDColumn("int_col", TDColumnType.INT, keyName)));
 
             // schema test with duplicated key
-            newSchema = ImmutableList.<TDColumn>builder()
-                    .addAll(targetTable.getSchema())
-                    .add(new TDColumn("str_col", TDColumnType.STRING, keyName))
-                    .add(new TDColumn("str_col", TDColumnType.STRING, keyName))
-                    .build();
+            newSchema = new ArrayList<>(targetTable.getSchema());
+            newSchema.add(new TDColumn("str_col", TDColumnType.STRING, keyName));
+            newSchema.add(new TDColumn("str_col", TDColumnType.STRING, keyName));
             client.updateTableSchema(SAMPLE_DB, t, newSchema, true);
             updatedTable = findTable(SAMPLE_DB, t).get();
             logger.debug(updatedTable.toString());
@@ -1146,20 +1123,9 @@ public class TestTDClient
             client.createBulkImportSession(session, SAMPLE_DB, bulkImportTable);
 
             List<TDBulkImportSession> sessionList = client.listBulkImportSessions();
-            TDBulkImportSession foundInList = Iterables.find(sessionList, new Predicate<TDBulkImportSession>()
-            {
-                @Override
-                public boolean apply(TDBulkImportSession input)
-                {
-                    return test(input);
-                }
-
-                @Override
-                public boolean test(TDBulkImportSession input)
-                {
-                    return input.getName().equals(session);
-                }
-            });
+            TDBulkImportSession foundInList = sessionList.stream().filter(input -> {
+                return input.getName().equals(session);
+            }).findAny().get();
 
             TDBulkImportSession bs = client.getBulkImportSession(session);
             logger.info("bulk import session: {}, error message: {}", bs.getJobId(), bs.getErrorMessage());
@@ -1283,20 +1249,9 @@ public class TestTDClient
             }
 
             // Check the data
-            TDTable imported = Iterables.find(client.listTables(SAMPLE_DB), new Predicate<TDTable>()
-            {
-                @Override
-                public boolean apply(TDTable input)
-                {
-                    return test(input);
-                }
-
-                @Override
-                public boolean test(TDTable input)
-                {
-                    return input.getName().equals(bulkImportTable);
-                }
-            });
+            TDTable imported = client.listTables(SAMPLE_DB).stream().filter(input -> {
+                return input.getName().equals(bulkImportTable);
+            }).findFirst().get();
 
             assertEquals(numRowsInPart * 2, imported.getRowCount());
             List<TDColumn> columns = imported.getColumns();
@@ -1401,9 +1356,9 @@ public class TestTDClient
     public void getSavedQueryHistory()
     {
         List<TDSavedQuery> allQueries = client.listSavedQueries();
-        List<TDSavedQuery> queries = FluentIterable.from(allQueries)
+        List<TDSavedQuery> queries = allQueries.stream()
                 .limit(10)
-                .toList();
+                .collect(Collectors.toList());
 
         for (TDSavedQuery query : queries) {
             TDSavedQueryHistory firstPage = client.getSavedQueryHistory(query.getName());
@@ -1819,15 +1774,14 @@ public class TestTDClient
     public void customHeaders()
             throws InterruptedException
     {
-        Multimap<String, String> headers0 = ImmutableMultimap.of(
-                "k0", "v0");
-        Multimap<String, String> headers1 = ImmutableMultimap.of(
-                "k1", "v1a",
-                "k1", "v1b",
-                "k2", "v2");
-        Multimap<String, String> headers2 = ImmutableMultimap.of(
-                "k3", "v3",
-                "k4", "v4");
+        Map<String, Set<String>> headers0 = Collections.singletonMap(
+                "k0", Collections.singleton("v0"));
+        Map<String, List<String>> headers1 = new HashMap<>();
+        headers1.put("k1", Arrays.asList("v1a", "v1b"));
+        headers1.put("k2", Collections.singletonList("v2"));
+        Map<String, List<String>> headers2 = new HashMap<>();
+        headers1.put("k3", Collections.singletonList("v3"));
+        headers1.put("k4", Collections.singletonList("v4"));
 
         client = TDClient.newBuilder(false)
                 .setUseSSL(false)
